apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  selector:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
