apps/hello-world/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  to:
    kind: Service
    name: hello-world
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
